[package]
name = "cook_book_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
mockall = "0.11.4"
rocket = {version = "0.5.0-rc.2", features = ["json"]}
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
serde = "1.0.159"
serde_json = "1.0.96"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["sync"] 

[dev-dependencies]
tokio = "1.27.0"
